Fix margin-bottom unit for h1 heading in SCSS

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -21,7 +21,7 @@ img {
 /* Specific styles for headings */
 h1 {
   font-size: 45px;
-  margin-bottom: 5;
+  margin-bottom: 5px;
   // text-align: center;
   // line-height: 1.1;
 }
