--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -3,7 +3,7 @@
 
 body {
   background-color: #121212;
-  padding:15px;
+  padding:20px;
   font: 15px/1.6 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:whitesmoke;
   font-weight:400;
@@ -15,12 +15,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 img {
-  max-width:95%;
+  max-width:100%;
 }
 
 /* Specific styles for headings */
 h1 {
-  font-size: 45px;
+  font-size: 50px;
   margin-bottom: 5px;
   // text-align: center;
   // line-height: 1.1;
@@ -84,7 +84,7 @@ p, ul, ol, table, pre, dl {
 a {
   color:#59a2f7;
   text-decoration:none;
-  // font-weight: bold;
+  font-weight: bold;
 }
 
 a:hover, a:focus {
@@ -122,7 +122,7 @@ table {
 th, td {
   color: white;
   text-align: center;
-  padding: 5px 15px;
+  // padding: 5px 15px;
   border: none; /* Removes any borders from table cells */
 }
 
