--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -85,7 +85,7 @@ p, ul, ol, table, pre, dl {
 a {
   color:#59a2f7;
   text-decoration:none;
-  font-weight: bold;
+  // font-weight: bold;
 }
 
 a:hover, a:focus {
