--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -278,9 +278,9 @@ ul.downloads {
     width:auto;
   }
 
-  header {
-    padding-right:320px;
-  }
+  // header {
+  //   padding-right:320px;
+  // }
 
   section {
     border:1px solid #e5e5e5;
