--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -22,7 +22,6 @@ img {
 h1 {
   font-size: 51px;
   // margin-bottom: 5px;
-  // text-align: center;
   // line-height: 1.1;
 }
 
@@ -48,7 +47,7 @@ h5 {
 }
 
 strong {
-  color: white;
+  color: red;
   font-weight: 900;
 }
 
