Remove commented-out top positioning for cleaner code

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -61,7 +61,7 @@ header {
   width:300px;
   float:left;
   position:fixed;
-  top: 0; /* Ensures it stays at the top of the viewport */
+  // top: 0; 
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
