Refine "Made by" text styling for improved alignment and consistency

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -252,7 +252,7 @@ ul.downloads {
 .made-by {
   color: #f0f0f0; /* Optional: Add a subtle color */
   text-align: center; /* Center the "Made by" text */
-  margin-top: 5px; /* Optional: Adjust spacing as needed */
+  margin-top: 5px;
   font-size: 14px; /* Optional: Adjust the font size */
 }
 
