Adjust heading margin for consistency across all levels

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -11,7 +11,7 @@ body {
 /* General heading styles */
 h1, h2, h3, h4, h5, h6 {
   color: white; /* Applies to all headings */
-  // margin: 0 0 20px; /* Consistent margin */
+  margin: 10px 10px 10px; /* Consistent margin */
 }
 
 img {
