--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -93,26 +93,26 @@ a:hover, a:focus {
   font-weight: bold;
 }
 
-// blockquote {
-//   border-left:1px solid #e5e5e5;
-//   margin:0;
-//   padding:0 0 0 20px;
-//   font-style:italic;
-// }
+blockquote {
+  border-left:1px solid #e5e5e5;
+  margin:0;
+  padding:0 0 0 20px;
+  font-style:italic;
+}
 
-// code, pre {
-//   font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
-//   color:white;
-//   ;
-// }
+code, pre {
+  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
+  color:white;
+  ;
+}
 
-// pre {
-//   padding:8px 15px;
-//   background: #f8f8f8;
-//   border-radius:5px;
-//   border:1px solid #e5e5e5;
-//   overflow-x: auto;
-// }
+pre {
+  padding:8px 15px;
+  background: red;
+  border-radius:5px;
+  border:1px solid #e5e5e5;
+  overflow-x: auto;
+}
 
 table {
   width: 100%;
