--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -78,7 +78,7 @@ section {
 
 /* Paragraphs, lists, and other block elements */
 p, ul, ol, table, pre, dl {
-  margin: 15px 0 15px;
+  margin: 20px 20px;
 }
 
 a {
@@ -107,7 +107,7 @@ code, pre {
 }
 
 pre {
-  padding:8px 15px;
+  padding:15px 15px;
   background: red;
   border-radius:5px;
   border:1px solid #e5e5e5;
