--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -11,11 +11,11 @@ body {
 /* General heading styles */
 h1, h2, h3, h4, h5, h6 {
   color: white;
-  margin: 0 0 15px;
+  margin: 0 0 20px;
 }
 
 p, ul, ol, table, pre, dl {
-  margin: 0 0 15px;
+  margin: 0 0 20px;
 }
 
 
@@ -25,18 +25,18 @@ img {
 
 /* Specific styles for headings */
 h1 {
-  font-size: 50px;
-  line-height: 1.2;
+  font-size: 40px;
+  line-height: 1.1;
 }
 
 h2 {
   font-size: 30px;
-  line-height: 1.2;
+  line-height: 1.1;
 }
 
 h3 {
   font-size: 25px;
-  line-height: 1.2;
+  line-height: 1.1;
 }
 
 h4 {
@@ -47,7 +47,7 @@ h4 {
 
 h5 {
   font-size: 20px;
-  line-height: 1.2;
+  line-height: 1.1;
 }
 
 strong {
@@ -62,7 +62,7 @@ strong {
 
 header {
   // padding-top: 10px;
-  width:300px;
+  width:350px;
   float:left;
   position:fixed;
   top: 0;
@@ -70,7 +70,7 @@ header {
 }
 
 section {
-  width:600px;
+  width:550px;
   float:right;
   padding-bottom: 35px;
 }
@@ -121,8 +121,8 @@ table {
 
 th, td {
   color: white;
-  text-align: center;
-  padding: 10px 10px;
+  text-align: left;
+  padding: 5px 10px;
   border: none;
 }
 
@@ -154,7 +154,7 @@ hr {
   border:0;
   background:#dddd;
   height:1px;
-  margin: 10px 0px;
+  margin: 10px 0px 10px;
 }
 
 /* Style the unordered list */
