Uncomment styles for icon elements to ensure consistent rendering

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -202,13 +202,13 @@ ul.downloads {
   font-size: 17px;
 }
 
-// i {
-//   border: none; /* Remove any borders */
-//   padding: 0; /* Remove padding */
-//   margin: 0; /* Remove margins */
-//   background: none; /* Remove background */
-//   content: none; /* Ensure no placeholder content */
-// }
+i {
+  border: none; /* Remove any borders */
+  padding: 0; /* Remove padding */
+  margin: 0; /* Remove margins */
+  background: none; /* Remove background */
+  content: none; /* Ensure no placeholder content */
+}
 
 /* Style the anchor tag for the button */
 .icon {
