Update font size and adjust header and section widths for improved layout

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -25,7 +25,7 @@ img {
 
 /* Specific styles for headings */
 h1 {
-  font-size: 50px;
+  font-size: 52px;
   line-height: 1.1;
 }
 
@@ -61,8 +61,8 @@ strong {
 
 
 header {
-  // padding-top: 10px;
-  width:300px;
+  padding-top: 10px;
+  width:320px;
   float:left;
   position:fixed;
   top: 0;
@@ -70,7 +70,7 @@ header {
 }
 
 section {
-  width:600px;
+  width:630px;
   float:right;
   padding-bottom: 35px;
 }
