--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,12 @@
               <i class="fab fa-github"></i>
             </a>
           </li>
-
+          <li>
+            <a href="https://drive.google.com/file/d/1XK4EnbtcbcLng_BA5krfmxzvNpKASurw/view?usp=sharing" class="icon">
+              <span>Download <strong>Resume</strong></span>
+              <i class="fas fa-file"></i>
+            </a>
+          </li>
         </ul>
         <p class="made-by">Made by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
