Change resume download icon to a download symbol for better clarity

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
           <li>
             <a href="https://drive.google.com/file/d/1XK4EnbtcbcLng_BA5krfmxzvNpKASurw/view?usp=sharing" class="icon">
               <span>Download <strong>Resume</strong></span>
-              <i class="fas fa-file"></i>
+              <i class="fas fa-download"></i>
             </a>
           </li>
         </ul>
