--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
           <!-- <li><a href="{{ site.github.repository_url }}">View on <strong>GitHub</strong></a></li> -->
           <li>
             <a href="{{ site.github.repository_url }}" class="icon">
-              <span>View on <strong>GitHub</strong></span>
+              <span>View <strong>Code</strong></span>
               <i class="fab fa-github"></i>
             </a>
           </li>
