Update link text for resume download for improved clarity

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
           </li>
           <li>
             <a href="https://drive.google.com/file/d/1XK4EnbtcbcLng_BA5krfmxzvNpKASurw/view?usp=sharing" class="icon">
-              <span>Download <strong>Resume</strong></span>
+              <span>View <strong>Resume</strong></span>
               <i class="fas fa-download"></i>
             </a>
           </li>
