--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
         {% endif %}
 
         <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
+         
         <p>
           {% for item in site.description %}
             {{ item }}<br/>
@@ -62,10 +63,10 @@
 
       </section>
       <footer>
-        <!-- {% if site.github.is_project_page %}
+        {% if site.github.is_project_page %}
         <p>Made by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %} -->
-        <!-- <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p> -->
+        {% endif %}
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
