Uncomment kbd and footer styles for improved visibility and layout

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -137,19 +137,19 @@ pre {
 }
 
 
-// kbd {
-//   background-color: #fafbfc;
-//   border: 1px solid #c6cbd1;
-//   border-bottom-color: #959da5;
-//   border-radius: 3px;
-//   box-shadow: inset 0 -1px 0 #959da5;
-//   color: #444d56;
-//   display: inline-block;
-//   font-size: 11px;
-//   line-height: 10px;
-//   padding: 3px 5px;
-//   vertical-align: middle;
-// }
+kbd {
+  background-color: #fafbfc;
+  border: 1px solid #c6cbd1;
+  border-bottom-color: #959da5;
+  border-radius: 3px;
+  box-shadow: inset 0 -1px 0 #959da5;
+  color: #444d56;
+  display: inline-block;
+  font-size: 11px;
+  line-height: 10px;
+  padding: 3px 5px;
+  vertical-align: middle;
+}
 
 hr {
   border:0;
@@ -236,14 +236,13 @@ ul.downloads {
   font-size: 14px; /* Adjust font size */
 }
 
-// footer {
-//   width:270px;
-//   float:left;
-//   position:fixed;
-//   // bottom:50px;
-//   bottom: 0;
-//   -webkit-font-smoothing:subpixel-antialiased;
-// }
+footer {
+  width:270px;
+  float:left;
+  position:fixed;
+  bottom: 0px;
+  -webkit-font-smoothing:subpixel-antialiased;
+}
 
 @media print, screen and (max-width: 960px) {
 
