Refactor footer markup for consistency and improve styling in default layout

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -233,7 +233,7 @@ ul.downloads {
   color: #f0f0f0; /* Subtle light text color */
   text-align: center; /* Center-align text */
   font-size: 13px; /* Adjust font size */
-  margin-top: 10px; /* Add spacing above */
+  // margin-top: 10px; /* Add spacing above */
 }
 
 footer {
