--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,21 +54,24 @@
             </a>
           </li>
         </ul>
+
         <p class="made-by">Made by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
+
       </header>
       <section>
 
       {{ content }}
-      
+
       {% if site.github.is_project_page %}
-      <p>Made by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+      <p class="made-by">Made by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
       {% endif %}
+
       </section>
       <footer>
-        <!-- {% if site.github.is_project_page %}
-        <p>Made by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %} -->
+        {% if site.github.is_project_page %}
+        <p class="made-by">Made by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        {% endif %}
         <!-- <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p> -->
       </footer>
     </div>
