Adjust header font size and update section padding for improved layout

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -26,7 +26,7 @@ img {
 
 
 h1 {
-  font-size: 52px;
+  font-size: 53px;
   line-height: 1.1;
 }
 
@@ -73,7 +73,8 @@ header {
 section {
   width:630px;
   float:right;
-  padding-bottom: 35px;
+  padding: 20px;
+  // padding-bottom: 40px;
 }
 
 .wrapper {
