--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -18,16 +18,9 @@ p, ul, ol, table, pre, dl {
   margin: 0 0 20px;
 }
 
-
-img {
-  max-width:100%;
-  height:auto;
-}
-
-
 h1 {
   font-size: 52.5px;
-  line-height: 1;
+  // line-height: 1;
 }
 
 h2 {
@@ -60,9 +53,13 @@ strong {
 //   font-size:11px;
 // }
 
+img {
+  max-width:100%;
+  height:auto;
+}
 
 header {
-  padding-top: 5px;
+  // padding-top: 5px;
   width:300px;
   float:left;
   position:fixed;
@@ -74,7 +71,7 @@ section {
   width:630px;
   float:right;
   // padding: 40px;
-  padding-bottom: 40px;
+  // padding-bottom: 40px;
 }
 
 .wrapper {
@@ -156,7 +153,7 @@ hr {
   border:0;
   background:#dddd;
   height:1px;
-  margin: 10px 0px 10px;
+  margin: 20px 0px 20px;
 }
 /* Center the container for downloads and text */
 .downloads-container {
