--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -11,7 +11,7 @@ body {
 /* General heading styles */
 h2, h3, h4, h5, h6 {
   color: white;
-  margin: 20px 0 20px;
+  margin: 0 0 20px;
 }
 
 p, ul, ol, table, pre, dl {
@@ -71,7 +71,7 @@ section {
   width:630px;
   float:right;
   // padding: 40px;
-  // padding-bottom: 40px;
+  padding-bottom: 30px;
 }
 
 .wrapper {
