--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -12,24 +12,26 @@ p, ul, ol, table, pre, dl {
   margin: 0 0 20px;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin: 0; /* Remove default margins */
+  line-height: 1.2; /* Adjust internal spacing */
+}
+
 h1 {
   font-size: 52.5px;
-  padding: 0;
-  // line-height: 1;
+  margin: 10px 0 20px;
 }
 
 h2 {
   color: white;
   margin: 0 0 20px;
   font-size: 30px;
-  line-height: 1.1;
 }
 
 h3 {
   color: white;
   margin: 0 0 15px;
   font-size: 25px;
-  line-height: 1.1;
 }
 
 h4 {
@@ -44,7 +46,6 @@ h5 {
   color: white;
   margin: 0 0 20px;
   font-size: 20px;
-  line-height: 1.1;
 }
 
 strong {
