Enable image height auto adjustment for better responsiveness

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -60,7 +60,7 @@ strong {
 img {
   max-width:100%;
   margin: 0 0 10px;
-  // height:auto;
+  height:auto;
 }
 
 .wrapper {
@@ -69,7 +69,6 @@ img {
 }
 
 header {
-  // padding-top: 5px;
   width:300px;
   float:left;
   position:fixed;
