Adjust header font size for improved readability

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -73,6 +73,7 @@ header {
   float:left;
   position:fixed;
   top: 0;
+  font-size: 14px;
   font-weight:350;
   -webkit-font-smoothing:subpixel-antialiased;
 }
