--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -3,7 +3,7 @@
 
 body {
   background-color: #121212;
-  padding: 30px;
+  padding: 25px;
   font: 15px/1.6 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:rgb(240, 240, 240);
 }
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 52.5px;
-  margin: 10px 0 10px;
+  margin: 0 0 10px;
 }
 
 h2 {
@@ -81,7 +81,7 @@ header {
 section {
   width:620px;
   float:right;
-  padding-bottom: 40px;
+  padding-bottom: 25px;
   font-size: 15px;
   font-weight:400;
   -webkit-font-smoothing:subpixel-antialiased;
