Adjust header position in jekyll-theme-minimal.scss

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -72,7 +72,7 @@ header {
   width:300px;
   float:left;
   position:fixed;
-  top: 0;
+  top: 30px;
   font-size: 14.5px;
   font-weight:350;
   -webkit-font-smoothing:subpixel-antialiased;
