Adjust section top padding in jekyll-theme-minimal.scss

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -79,10 +79,10 @@ header {
 }
 
 section {
-  top: 40px;
   width:620px;
   float:right;
   padding-bottom: 25px;
+  padding-top: 20px;
   font-size: 15px;
   font-weight:400;
   -webkit-font-smoothing:subpixel-antialiased;
