--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -81,8 +81,7 @@ header {
 section {
   width:620px;
   float:right;
-  padding-bottom: 25px;
-  padding-top: 20px;
+  padding: 15px 0 25px;
   font-size: 15px;
   font-weight:400;
   -webkit-font-smoothing:subpixel-antialiased;
